# archive-image-search

./: .gitattributes  .gitignore  app.py
archive-image-search/: .gitattributes  .gitignore  app.py  chroma_client.py  embeddings.py  main.ipynb  pyproject.toml  s3.py  utils.py
archive-image-search/.local/: chroma.sqlite3
archive-image-search/.local/0d0ba4ba-14a2-4569-9e18-4cf0ef27470e/: index_metadata.pickle
